Bug 1877811: Maybe create SVG accessible in display:contents contexts, r=Jamie

Since SVG elements aren't in a markup map, Gecko doesn't check for them when
searching markup maps while determining whether to create an accessible in
display:contents contexts. This revision addresses the problem by factoring out
the SVG creation code and using it in two places - newly in the dislay:contents
code. This revision also removes expected failures from relevant web platform
tests.

Differential Revision: https://phabricator.services.mozilla.com/D207943